fixed header menu links alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,7 +199,12 @@ header {
     justify-content: center;
 
     @media (min-width: 768px) {
-      flex-basis: 50%;
+      flex-basis: 40%;
+      justify-content: flex-start;
+    }
+
+    @media (min-width: 1024px) {
+      flex-basis: 95%;
       justify-content: flex-start;
     }
   }
